fix: Font awesome not visible + element styling issue
In elementSelectors.css, the styles for details and
summary elements were declared without any safe measure and
therefore when the styles were injected into any webpage, the styles
of that page's details and summary elements were affected.

Second issue was that font-awesome icons weren't visible, so I have
included the required files in the manifest to solve it.

--- a/src/scripts/styles/elementSelector.css
+++ b/src/scripts/styles/elementSelector.css
@@ -155,14 +155,14 @@ button.mws-selectElementButton {
 
 }
 
-summary {
+.mws-collapsableSettings-wrapper summary {
   display: block;
   position: relative;
   user-select: none;
 
 }
 /* Create a new custom triangle on the right side */
-summary::after {
+.mws-collapsableSettings-wrapper summary::after {
   display: inline-block;
   font-family: 'Font Awesome 6 Free';
   content: '\f105';
@@ -171,7 +171,7 @@ summary::after {
   right: var(--mws-rem);
 }
 
-details[open] > summary::after {
+.mws-collapsableSettings-wrapper details[open] > .mws-collapsableSettings-wrapper summary::after {
   transform: rotate(90deg);
 }
 
